2005-02-15  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* GNUmakefile.am (dev devices): Create $(DESTDIR)/dev if it does
	not exist.

2005-02-15  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/queue.c (rt_queue_recv): Transfer message ownership
	by properly incrementing the refcount upon direct receive
	(i.e. the receiver did not go through any sleep state through the
	pendq).

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Update MSR
	as required when switching in the last Altivec and/or SPE owner.
	(xnarch_switch_to): Don't rely on FTR fixups when emitting
	Altivec's dssall insn; they don't work properly in this context.

2005-02-14  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in: Prevent invalid SMI workaround configurations
	through configure command line.

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Do not
	enforce MSR FP state when switching context, create kernel
	threads, with FP bit disabled, then let xnarch_init_thread set it
	and context switches preserve it.

2005-02-14  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/patches: Upgrade to Adeos 2.6.10rc3-ppc-r6c12. This
	fixes the random lockup bug experienced while running user-space
	threads.

2005-02-11  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/thread.c (xnthread_init): Provide default thread name
	when unspecified.

2005-02-10  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (linux_renice_process): Optimize priority
	tracking between Linux and RTAI.

2005-02-10  Philippe Gerum  <rpm@localhost>

	* nucleus/pod.c, nucleus/sync.c, nucleus/shadow.c: Rework the way
	Linux priorities are updated on-the-fly when the nucleus changes
	them for shadow threads. The new approach is based on a lazy
	update upon return from xnshaow_relax(), since sending priority
	update requests to Linux makes no sense while the affected task is
	running in primary mode.

2005-02-09  Philippe Gerum  <rpm@xenomai.org>
